--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+VITE_API_URL=https://tlc-connect-backend-production.up.railway.app/
 VITE_PUSHER_APP_KEY=9fec9a97514961b47bee
 VITE_PUSHER_APP_CLUSTER=ap3
